# PSTL-Tri-optimise

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  array_generator.py  array_generator_config.json  bench.bash  cmake_install.cmake  entropy_utils.py  generateur_graphique.py  result.data  sort  test.py  whole_execution.bash
files/: test.tab
include/: Bench.h  Benchmark.h  Generator.h  MergingStategy.h  Rules.h  RunFinder.h  Sort.h  Stack.h  StackOfRun.h  ToolBox.h  VectorGenerator.h
src/: Bench.cpp  Benchmark.cpp  Generator.cpp  ToolBox.cpp  VectorGenerator.cpp  main.cpp
